# advent-of-code-python

./: .python-version  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
aoc/: coordinate.py
aoc/_2024/day01/: aoc2024_day01.py  aoc2024_day01_test.py  run.py
aoc/_2024/day02/: aoc2024_day02.py  aoc2024_day02_test.py  data.py  run.py
aoc/_2024/day03/: aoc2024_day03.py  aoc2024_day03_test.py  data.py  run.py
aoc/_2024/day04/: aoc2024_day04.py  aoc2024_day04_test.py  run.py
aoc/_2024/dayXX/: aoc2024_dayXX.py  aoc2024_dayXX_test.py  run.py
docs/: index.md
